# weew

./: .gitmodules  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/cli/: mod.rs  noop.rs  run.rs
enarx-cli/: Cargo.toml  build.rs  enarx.socket  enarx@.service  test-server.sh
enarx-cli/src/: cmd.rs  main.rs  proto.rs  util.rs
enarx-cli/src/cmd/: info.rs  noop.rs  run.rs  serve.rs
enarx-cli/src/util/: listenfds.rs  sdnotify.rs
enarx-config/: Cargo.toml
enarx-config/src/: lib.rs
enarx-proto/: Cargo.toml  build.rs
enarx-proto/proto/: v0.proto
enarx-proto/src/: lib.rs
